--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -37,3 +37,21 @@
     margin-top: 8px;
     margin-bottom: 8px;
 }
+
+@media(max-width: 425px) {
+    .card {
+        margin: 10px 0;
+    }
+
+    h3 {
+        font-size: 15px;
+    }
+    
+    h2 {
+        font-size: 17px;
+    }
+
+    h4 {
+        font-size: 13px;
+    }
+}
